<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:visible="true">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home"
            android:title="@string/main_page" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login"
            android:visible="true" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/nav_log_out"
            android:visible="true" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/nav_friends"
            android:visible="true" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera"
            android:visible="false" />
        <item
            android:id="@+id/nav_compass"
            android:icon="@mipmap/ic_launcher_foreground_compass"
            android:title="@string/compass" />
        <item
            android:id="@+id/nav_stolby"
            android:icon="@drawable/ic_rock"
            android:title="@string/stolby" />
    </group>

</menu>
